--- a/articles/lab-services/TOC.yml
+++ b/articles/lab-services/TOC.yml
@@ -135,8 +135,10 @@ items:
         href: devtest-lab-add-vm.md
       - name: Claimbare virtuele machines maken en beheren
         href: devtest-lab-add-claimable-vm.md
-      - name: Virtuele machines maken en beheren met Azure CLI
+      - name: VM's maken en beheren met Azure CLI
         href: devtest-lab-vmcli.md
+      - name: Een VM maken met Azure PowerShell
+        href: devtest-lab-vm-powershell.md
       - name: Een virtuele machine maken op basis van een Resource Manager-sjabloon
         href: devtest-lab-use-resource-manager-template.md
       - name: Een VM opnieuw opstarten
@@ -277,9 +279,9 @@ items:
       href: https://azure.microsoft.com/resources/videos/index/?services=devtest-lab
     - name: Veelgestelde vragen
       href: devtest-lab-faq.md
-ms.openlocfilehash: bee44d9ce7378bd48960c47ed9be9c7f53e23110
-ms.sourcegitcommit: a60a55278f645f5d6cda95bcf9895441ade04629
+ms.openlocfilehash: 0b8c70629d17ed93b67a746fadfe66944d9489c9
+ms.sourcegitcommit: 0a3efe5dcf56498010f4733a1600c8fe51eb7701
 ms.translationtype: HT
 ms.contentlocale: nl-NL
 ms.lasthandoff: 04/03/2019
-ms.locfileid: "58886672"
+ms.locfileid: "58894437"
