--- a/articles/cognitive-services/Translator/toc.yml
+++ b/articles/cognitive-services/Translator/toc.yml
@@ -109,6 +109,8 @@ items:
     items:
     - name: Een WPF-app maken voor Translator Text
       href: tutorial-wpf-translation-csharp.md
+    - name: Een Flask-app voor vertaling maken
+      href: tutorial-build-flask-app-translation-synthesis.md
   - name: Concepten
     items:
     - name: Tekstvertaling aanpassen en verbeteren
@@ -241,9 +243,9 @@ items:
       href: https://stackoverflow.com/questions/tagged/microsoft-translator
     - name: UserVoice
       href: https://cognitive.uservoice.com/knowledgebase/articles/1855897-custom-translator-preview-resource-guide
-ms.openlocfilehash: 72fc95b92d8e93e3cf56d614de8a1967d2752f96
-ms.sourcegitcommit: 7723b13601429fe8ce101395b7e47831043b970b
+ms.openlocfilehash: 319b40bc97a9cadfdffa8891e01d5f22bf872755
+ms.sourcegitcommit: 045406e0aa1beb7537c12c0ea1fbf736062708e8
 ms.translationtype: HT
 ms.contentlocale: nl-NL
-ms.lasthandoff: 02/21/2019
-ms.locfileid: "56585267"
+ms.lasthandoff: 04/04/2019
+ms.locfileid: "59006298"
