commit translated contents

--- a/articles/role-based-access-control/TOC.yml
+++ b/articles/role-based-access-control/TOC.yml
@@ -27,8 +27,6 @@ items:
   items:
   - name: Roldefinities begrijpen
     href: role-definitions.md
-  - name: Inzicht in weigeringstoewijzingen
-    href: deny-assignments.md
   - name: PIM voor Azure-resources
     href: pim-azure-resource.md
   - name: Voorwaardelijke toegang voor Azure-beheer
@@ -49,13 +47,16 @@ items:
       href: role-assignments-template.md
   - name: Toegang weigeren
     items:
+    - name: Weigeringstoewijzingen
+      href: deny-assignments.md
     - name: Portal
       href: deny-assignments-portal.md
     - name: REST-API
       href: deny-assignments-rest.md
   - name: Aangepaste rollen
-    href: custom-roles.md
     items:
+    - name: Overzicht
+      href: custom-roles.md
     - name: PowerShell
       href: custom-roles-powershell.md
     - name: Azure-CLI
@@ -96,9 +97,9 @@ items:
   items:
   - name: Uw vaardigheden ontwikkelen met Microsoft Learn
     href: /learn/browse/?products=azure-active-directory
-ms.openlocfilehash: 20500ad90e710b2c0e4359832a24a352c14ea0b2
-ms.sourcegitcommit: 4bf542eeb2dcdf60dcdccb331e0a336a39ce7ab3
+ms.openlocfilehash: 30bd7deb2a0845288999a09912e48700d3182b9b
+ms.sourcegitcommit: 045406e0aa1beb7537c12c0ea1fbf736062708e8
 ms.translationtype: HT
 ms.contentlocale: nl-NL
-ms.lasthandoff: 02/19/2019
-ms.locfileid: "56408762"
+ms.lasthandoff: 04/04/2019
+ms.locfileid: "59007016"
