--- a/articles/service-fabric/toc.yml
+++ b/articles/service-fabric/toc.yml
@@ -84,6 +84,22 @@ items:
       href: service-fabric-tutorial-standalone-install-an-application.md
     - name: 4 - Uw cluster opschonen en de infrastructuur verwijderen
       href: service-fabric-tutorial-standalone-clean-up.md
+- name: Aanbevolen procedures
+  items:
+  - name: Overzicht van best practices voor Service Fabric
+    href: service-fabric-best-practices-overview.md
+  - name: Beveiliging
+    href: service-fabric-best-practices-security.md
+  - name: Netwerken
+    href: service-fabric-best-practices-networking.md
+  - name: Compute-planning en schalen
+    href: service-fabric-best-practices-capacity-scaling.md
+  - name: Infrastructure als code
+    href: service-fabric-best-practices-infrastructure-as-code.md
+  - name: Controle en diagnose
+    href: service-fabric-best-practices-monitoring.md
+  - name: Controlelijst voor productiegereedheid
+    href: service-fabric-production-readiness-checklist.md
 - name: Voorbeelden
   items:
   - name: Codevoorbeelden
@@ -112,20 +128,6 @@ items:
       href: service-fabric-cluster-security.md
     - name: Algemene Azure-beveiligingskenmerken
       href: service-fabric-security-attributes.md
-  - name: Aanbevolen procedures
-    items:
-    - name: Overzicht van best practices voor Service Fabric
-      href: service-fabric-best-practices-overview.md
-    - name: Netwerken
-      href: service-fabric-best-practices-networking.md
-    - name: Compute-planning en schalen
-      href: service-fabric-best-practices-capacity-scaling.md
-    - name: Infrastructure als code
-      href: service-fabric-best-practices-infrastructure-as-code.md
-    - name: Controle en diagnose
-      href: service-fabric-best-practices-monitoring.md
-    - name: Controlelijst voor productiegereedheid
-      href: service-fabric-production-readiness-checklist.md
   - name: Terminologie
     href: service-fabric-technical-overview.md
   - name: Toepassingen bouwen
@@ -851,9 +853,9 @@ items:
     href: https://azure.microsoft.com/updates/?product=service-fabric
   - name: Video's
     href: https://azure.microsoft.com/documentation/videos/index/?services=service-fabric
-ms.openlocfilehash: 02b5712aedc96fce447f11b755b837b52855379b
-ms.sourcegitcommit: 62d3a040280e83946d1a9548f352da83ef852085
+ms.openlocfilehash: 1e2e30552272dd49979c9e26c3737abeec6e8c6d
+ms.sourcegitcommit: b4ad15a9ffcfd07351836ffedf9692a3b5d0ac86
 ms.translationtype: HT
 ms.contentlocale: nl-NL
-ms.lasthandoff: 04/08/2019
-ms.locfileid: "59278459"
+ms.lasthandoff: 04/05/2019
+ms.locfileid: "59058829"
