--- a/articles/notebooks/index.yml
+++ b/articles/notebooks/index.yml
@@ -1,19 +1,13 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 11d07f33a4f5e268ff2f0ac2966bde40a63a7529
-ms.sourcegitcommit: 5fbca3354f47d936e46582e76ff49b77a989f299
-ms.translationtype: HT
-ms.contentlocale: nl-NL
-ms.lasthandoff: 03/12/2019
-ms.locfileid: "57776801"
 documentType: LandingData
 title: Documentatie voor Azure Notebooks
 metadata:
-  title: Documentatie voor Azure Notebooks - quickstarts, zelfstudies, handleidingen | Microsoft Docs
-  description: Ontdek hoe u Jupyter-notebooks kunt maken, uitvoeren en delen via de gehoste Azure Notebooks-service.
+  title: 'Documentatie voor Azure Notebooks - quickstarts, zelfstudies, handleidingen | Microsoft Docs'
+  description: 'Ontdek hoe u Jupyter-notebooks kunt maken, uitvoeren en delen via de gehoste Azure Notebooks-service.'
   services: notebooks
   author: kraigb
   manager: douge
-  ms.service: azure
+  ms.service: azure-notebooks
   ms.tgt_pltfrm: na
   ms.devlang: na
   ms.topic: landing-page
@@ -22,53 +16,53 @@ metadata:
 abstract:
   description: 'Azure Notebooks is een gratis gehoste service om Jupyter-notebooks te ontwikkelen en uitvoeren in de cloud, zonder installatie. Jupyter (voorheen IPython) is een opensourceproject waarmee u eenvoudig Markdown-tekst, uitvoerbare code (Python, R en F#) en permanente gegevens, afbeeldingen en visualisaties kunt combineren op één deelbaar canvas: een notebook.'
 sections:
-- title: QuickStarts van vijf minuten
-  items:
-  - type: paragraph
-    text: Leer met Azure Notebooks werken aan de hand van deze quickstarts.
-  - type: list
-    style: cards
-    className: cardsM
-    columns: 2
+  - title: QuickStarts van vijf minuten
     items:
-    - href: /azure/notebooks/quickstart-create-share-jupyter-notebook
-      html: <p>Ontdek hoe u een Jupyter-notebook kunt maken en uitvoeren via Azure Notebooks en dat notebook vervolgens kunt delen met anderen.</p>
-      image:
-        src: media/index/Azure_AddNotebook.svg
-      title: Een notebook maken en delen
-    - href: /azure/notebooks/quickstart-clone-jupyter-notebook
-      html: <p>Ontdek hoe u een Jupyter-notebook kunt klonen van een GitHub-opslagplaats en dit kunt uitvoeren in uw Azure Notebooks-account.</p>
-      image:
-        src: media/index/Azure_ClonePage.svg
-      title: Een notebook klonen
-    - href: /azure/notebooks/quickstart-migrate-local-jupyter-notebook
-      html: <p>Ontdek hoe u een Jupyter-notebook kunt overzetten naar Azure Notebooks vanaf uw lokale computer of een web-URL en dit vervolgens kunt delen voor samenwerking.</p>
-      image:
-        src: media/index/Azure_MigrateNotebook.svg
-      title: Een lokaal Jupyter-notebook migreren
-    - href: /azure/notebooks/quickstart-create-jupyter-notebook-project-environment
-      html: <p>Ontdek hoe u een Azure Notebooks-project kunt configureren met een specifieke set geïnstalleerde pakketten en opstartscripts.</p>
-      image:
-        src: media/index/Azure_CustomEnvironment.svg
-      title: Een project met een aangepaste omgeving maken
-    - href: /azure/notebooks/quickstart-sign-in-azure-notebooks
-      html: <p>Ontdek hoe u zich kunt aanmelden bij Azure Notebooks en een gebruikers-id kunt instellen, zodat u toegang krijgt tot opgeslagen projecten en notebooks met anderen kunt delen.</p>
-      image:
-        src: media/index/Azure_UserAccount.svg
-      title: Aanmelden en een gebruikers-id instellen
-- title: Zelfstudies met stapsgewijze instructies
-  items:
-  - type: list
-    style: unordered
-    className: spaced noBullet
+      - type: paragraph
+        text: Leer met Azure Notebooks werken aan de hand van deze quickstarts.
+      - type: list
+        style: cards
+        className: cardsM
+        columns: 2
+        items:
+          - href: /azure/notebooks/quickstart-create-share-jupyter-notebook
+            html: <p>Ontdek hoe u een Jupyter-notebook kunt maken en uitvoeren via Azure Notebooks en dat notebook vervolgens kunt delen met anderen.</p>
+            image:
+              src: media/index/Azure_AddNotebook.svg
+            title: Een notebook maken en delen
+          - href: /azure/notebooks/quickstart-clone-jupyter-notebook
+            html: <p>Ontdek hoe u een Jupyter-notebook kunt klonen van een GitHub-opslagplaats en dit kunt uitvoeren in uw Azure Notebooks-account.</p>
+            image:
+              src: media/index/Azure_ClonePage.svg
+            title: Een notebook klonen
+          - href: /azure/notebooks/quickstart-migrate-local-jupyter-notebook
+            html: <p>Ontdek hoe u een Jupyter-notebook kunt overzetten naar Azure Notebooks vanaf uw lokale computer of een web-URL en dit vervolgens kunt delen voor samenwerking.</p>
+            image:
+              src: media/index/Azure_MigrateNotebook.svg
+            title: Een lokaal Jupyter-notebook migreren
+          - href: /azure/notebooks/quickstart-create-jupyter-notebook-project-environment
+            html: <p>Ontdek hoe u een Azure Notebooks-project kunt configureren met een specifieke set geïnstalleerde pakketten en opstartscripts.</p>
+            image:
+              src: media/index/Azure_CustomEnvironment.svg
+            title: Een project met een aangepaste omgeving maken
+          - href: /azure/notebooks/quickstart-sign-in-azure-notebooks
+            html: '<p>Ontdek hoe u zich kunt aanmelden bij Azure Notebooks en een gebruikers-id kunt instellen, zodat u toegang krijgt tot opgeslagen projecten en notebooks met anderen kunt delen.</p>'
+            image:
+              src: media/index/Azure_UserAccount.svg
+            title: Aanmelden en een gebruikers-id instellen
+  - title: Zelfstudies met stapsgewijze instructies
     items:
-    - html: <a href="/azure/notebooks/tutorial-create-run-jupyter-notebook">Alle stappen die nodig zijn om een notebook te maken</a>
-- title: Voorbeelden
-  items:
-  - type: paragraph
-    text: 'Gebruik de volgende voorbeelden om te werken met Notebooks:'
-  - type: list
-    style: unordered
-    className: spaced noBullet
+      - type: list
+        style: unordered
+        className: spaced noBullet
+        items:
+          - html: <a href="/azure/notebooks/tutorial-create-run-jupyter-notebook">Maak kennis met de volledige procedure voor het maken van een notebook.</a>
+  - title: Voorbeelden
     items:
-    - html: <a href="/azure/notebooks/azure-notebooks-samples">Voorbeelden van Jupyter-notebooks</a>
+      - type: paragraph
+        text: 'Gebruik de volgende voorbeelden om te werken met Notebooks:'
+      - type: list
+        style: unordered
+        className: spaced noBullet
+        items:
+          - html: <a href="/azure/notebooks/azure-notebooks-samples">Voorbeelden van Jupyter-notebooks</a>
