--- a/articles/iot-central/TOC.yml
+++ b/articles/iot-central/TOC.yml
@@ -36,6 +36,8 @@ items:
   items:
   - name: Apparaten verbinden
     items:
+    - name: Een apparaatverbindingsreeks genereren
+      href: howto-generate-connection-string.md
     - name: Een Node.js-toepassing (algemeen) voorbereiden en aansluiten
       href: howto-connect-nodejs.md
     - name: Een MXChip IoT DevKit voorbereiden en aansluiten
@@ -144,9 +146,9 @@ items:
     href: iot-central-customer-data-requests.md
   - name: Ondersteunde browsers
     href: iot-central-supported-browsers.md
-ms.openlocfilehash: 09145448edd42e03b77abde46a120ade1631d6bf
-ms.sourcegitcommit: 6da4959d3a1ffcd8a781b709578668471ec6bf1b
+ms.openlocfilehash: 277b1ca0a239bddc02ca32d93ca1ffebbf542240
+ms.sourcegitcommit: ef20235daa0eb98a468576899b590c0bc1a38394
 ms.translationtype: HT
 ms.contentlocale: nl-NL
-ms.lasthandoff: 03/27/2019
-ms.locfileid: "58520731"
+ms.lasthandoff: 04/09/2019
+ms.locfileid: "59425896"
