--- a/articles/data-catalog/TOC.yml
+++ b/articles/data-catalog/TOC.yml
@@ -9,6 +9,10 @@ items:
   items:
   - name: Een Azure Data Catalog maken
     href: data-catalog-get-started.md
+- name: Zelfstudies
+  items:
+  - name: Gegevensassets registreren
+    href: register-data-assets-tutorial.md
 - name: Concepten
   items:
   - name: Algemene scenario's
@@ -47,6 +51,8 @@ items:
     href: data-catalog-how-to-secure-catalog.md
   - name: Gerelateerde gegevensassets weergeven
     href: data-catalog-how-to-view-related-data-assets.md
+  - name: Problemen oplossen
+    href: troubleshoot-policy-configuration.md
 - name: Naslaginformatie
   items:
   - name: Codevoorbeelden
@@ -77,9 +83,9 @@ items:
     href: https://stackoverflow.com/questions/tagged/azure-data-catalog
   - name: Terminologie
     href: data-catalog-terminology.md
-ms.openlocfilehash: 17965d0b9394cfea83fdb463db6ee2b0fde15d87
-ms.sourcegitcommit: 62d3a040280e83946d1a9548f352da83ef852085
+ms.openlocfilehash: 0ef4cb62b8991db67df52fded512c1881050eac3
+ms.sourcegitcommit: 43b85f28abcacf30c59ae64725eecaa3b7eb561a
 ms.translationtype: HT
 ms.contentlocale: nl-NL
-ms.lasthandoff: 04/08/2019
-ms.locfileid: "59277626"
+ms.lasthandoff: 04/09/2019
+ms.locfileid: "59358381"
