--- a/articles/frontdoor/TOC.yml
+++ b/articles/frontdoor/TOC.yml
@@ -23,8 +23,6 @@ items:
     href: front-door-quickstart-template-samples.md
 - name: Concepten
   items:
-  - name: WAF
-    href: waf-overview.md
   - name: Back-ends en back-endpools
     href: front-door-backend-pool.md
   - name: Opslaan in cache met Front Door
@@ -49,6 +47,16 @@ items:
     href: front-door-routing-methods.md
   - name: URL opnieuw genereren
     href: front-door-url-rewrite.md
+  - name: WAF
+    items:
+    - name: Overzicht
+      href: waf-overview.md
+    - name: Aangepaste regels
+      href: waf-front-door-custom-rules.md
+    - name: Beleidsinstellingen
+      href: waf-front-door-policy-settings.md
+    - name: Bewaking en registratie
+      href: waf-front-door-monitor.md
 - name: Handleidingen
   items:
   - name: Problemen oplossen
@@ -57,10 +65,14 @@ items:
       href: front-door-troubleshoot-routing.md
     - name: Toegestane certificeringsinstanties
       href: front-door-troubleshoot-allowed-ca.md
-  - name: WAF
+  - name: WAF configureren
     items:
     - name: WAF-beleid configureren - portal
       href: waf-front-door-create-portal.md
+    - name: WAF-beleid configureren - Azure PowerShell
+      href: waf-front-door-custom-rules-powershell.md
+    - name: Aangepast antwoordcode configureren
+      href: waf-front-door-configure-custom-response-code.md
 - name: Veelgestelde vragen
   items:
   - name: Veelgestelde vragen over Front Door
@@ -85,9 +97,9 @@ items:
     href: https://azure.microsoft.com/pricing/calculator/
   - name: Service-updates
     href: https://azure.microsoft.com/updates/?product=frontdoor
-ms.openlocfilehash: 1c0712581dfd8c13c9cfd2418e742bd5df225a6b
-ms.sourcegitcommit: 62d3a040280e83946d1a9548f352da83ef852085
+ms.openlocfilehash: 209f0eaca474b33519e133145bc28c02870b668f
+ms.sourcegitcommit: 43b85f28abcacf30c59ae64725eecaa3b7eb561a
 ms.translationtype: HT
 ms.contentlocale: nl-NL
-ms.lasthandoff: 04/08/2019
-ms.locfileid: "59272816"
+ms.lasthandoff: 04/09/2019
+ms.locfileid: "59356738"
