--- a/articles/iot-accelerators/toc.yml
+++ b/articles/iot-accelerators/toc.yml
@@ -17,7 +17,7 @@ items:
       href: iot-accelerators-remote-monitoring-architectural-choices.md
   - name: Snelstartgidsen
     items:
-    - name: Een oplossing voor bewaking op afstand uitproberen
+    - name: Een externe bewakingsoplossing uitproberen
       href: quickstart-remote-monitoring-deploy.md
   - name: Zelfstudies
     items:
